--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
         </div>
       </div>
-      
+      <footer class="footer">
+        <img class="footer_logo" src="./img/footer_logo.png" alt="">
+        <h2 class="footer_text">সুপারিশ</h2>
+      </footer>
   </body>
 </html>
