--- a/index.html
+++ b/index.html
@@ -7,40 +7,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="bg_wrapper">
-      <header class="header">
-        <img class="header_logo" src="./img/Logo.png" alt="" />
-      </header>
-      <main class="main">
-        <div class="main_text">
-          <h2 class="main_header">
-            বেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈউদাংয়ৈউদাংয়ৈ
-          </h2>
-          <p class="main_paragraph">
-            বেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈ বেগ মানুষসুন সোবেন গাসৈ
-            সুবুঙানৗ উদাংয়ৈবেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈ
-          </p>
-          <button class="main_button">গাসৈ সুবুঙানৗ</button>
-        </div>
-        <img class="main_img" src="./img/main_img.png" alt="" />
-      </main>
-      <div class="bullets">
-        <div class="bullet">
-          <img class="bullet_img" src="./img/bullet1.png" alt="" />
-          <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
-        </div>
-        <div class="bullet">
-          <img class="bullet_img" src="./img/bullet2.png" alt="" />
-          <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
-        </div>
-        <div class="bullet">
-          <img class="bullet_img" src="./img/bullet3.png" alt="" />
-          <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
-        </div>
+    <header class="header">
+      <img class="header_logo" src="./img/Logo.png" alt="" />
+    </header>
+    <main class="main">
+      <div class="main_text">
+        <h2 class="main_header">
+          বেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈউদাংয়ৈউদাংয়ৈ
+        </h2>
+        <p class="main_paragraph">
+          বেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈ বেগ মানুষসুন সোবেন গাসৈ
+          সুবুঙানৗ উদাংয়ৈবেগ মানুষসুন সোবেন গাসৈ সুবুঙানৗ উদাংয়ৈ
+        </p>
+        <button class="main_button">গাসৈ সুবুঙানৗ</button>
       </div>
-      <footer class="footer">
-        <img class="footer_logo" src="./img/footer_logo.png" alt="">
-        <h2 class="footer_text">সুপারিশ</h2>
-      </footer>
+      <img class="main_img" src="./img/main_img.png" alt="" />
+    </main>
+    <div class="bullets">
+      <div class="bullet">
+        <img class="bullet_img" src="./img/bullet1.png" alt="" />
+        <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
+      </div>
+      <div class="bullet">
+        <img class="bullet_img" src="./img/bullet2.png" alt="" />
+        <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
+      </div>
+      <div class="bullet">
+        <img class="bullet_img" src="./img/bullet3.png" alt="" />
+        <h3 class="bullet_text">সোবেন গাসৈ সুবুঙানৗ</h3>
+      </div>
+    </div>
+    <footer class="footer">
+      <img class="footer_logo" src="./img/footer_logo.png" alt="" />
+      <h2 class="footer_text">সুপারিশ</h2>
+    </footer>
   </body>
 </html>
